--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -14,6 +14,9 @@ on:
   merge_group:
   workflow_dispatch:
 
+env:
+  component: frontend
+
 defaults:
   run:
     working-directory: ./frontend
@@ -26,9 +29,9 @@ jobs:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
       - uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b # v4
         with:
-          node-version-file: "frontend/.nvmrc"
+          node-version-file: "${{ env.component }}/.nvmrc"
           cache: "yarn"
-          cache-dependency-path: "frontend/yarn.lock"
+          cache-dependency-path: "${{ env.component }}/yarn.lock"
 
       - name: Install dependencies 📦
         run: yarn install --immutable
@@ -41,7 +44,7 @@ jobs:
 
   docker:
     uses: reims2/reims2/.github/workflows/docker.yml@main
-    concurrency: docker-frontend-${{ github.ref }}
+    concurrency: docker-${{ env.component }}-${{ github.ref }}
     if: ${{ github.event_name != 'merge_group' && github.event.action != 'labeled' }}
     secrets: inherit # pass all secrets
 
@@ -51,7 +54,7 @@ jobs:
       - ci
     if: github.ref == 'refs/heads/main'
     uses: reims2/reims2/.github/workflows/deploy.yml@main
-    concurrency: deploy-${{ github.repository }}
+    concurrency: deploy-${{ env.component }}
     secrets: inherit # pass all secrets
 
   dev-deploy:
@@ -59,7 +62,7 @@ jobs:
       - docker
     if: github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/dev'
     uses: reims2/reims2/.github/workflows/dev-deploy.yml@main
-    concurrency: dev-deploy-${{ github.repository }}
+    concurrency: dev-deploy-${{ env.component }}
     secrets: inherit # pass all secrets
 
   pr-deploy:
@@ -67,9 +70,9 @@ jobs:
       - docker
     if: ${{ (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'deploy')) }}
     uses: reims2/reims2/.github/workflows/deploy-instance.yml@main
-    concurrency: pr-deploy-frontend-${{ github.ref }}
+    concurrency: pr-deploy-${{ env.component }}-${{ github.ref }}
     with:
-      instance_name: frontend-pr-${{ github.event.number || 'unknown' }}
+      instance_name: ${{ env.component }}-pr-${{ github.event.number || 'unknown' }}
     secrets: inherit # pass all secrets
 
   e2e:
