--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -43,7 +43,7 @@ jobs:
 
   docker:
     uses: reims2/reims2/.github/workflows/docker.yml@main
-    concurrency: docker-${{ env.component }}-${{ github.ref }}
+    concurrency: docker-${{ github.ref }}
     if: ${{ github.event_name != 'merge_group' && github.event.action != 'labeled' }}
     secrets: inherit # pass all secrets
 
@@ -53,7 +53,7 @@ jobs:
       - ci # since we don"t execute tests in docker build
     if: github.ref == 'refs/heads/main'
     uses: reims2/reims2/.github/workflows/deploy.yml@main
-    concurrency: deploy-${{ env.component }}
+    concurrency: deploy-backend
     secrets: inherit # pass all secrets
 
   dev-deploy:
@@ -61,7 +61,7 @@ jobs:
       - docker
     if: github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/dev'
     uses: reims2/reims2/.github/workflows/dev-deploy.yml@main
-    concurrency: dev-deploy-${{ env.component }}
+    concurrency: dev-deploy-backend
     secrets: inherit # pass all secrets
 
   pr-deploy:
@@ -69,7 +69,7 @@ jobs:
       - docker
     if: ${{ (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'deploy')) }}
     uses: reims2/reims2/.github/workflows/deploy-instance.yml@main
-    concurrency: pr-deploy-${{ env.component }}-${{ github.ref }}
+    concurrency: pr-deploy-backend-${{ github.ref }}
     with:
-      instance_name: ${{ env.component }}-pr-${{ github.event.number || 'unknown' }}
+      instance_name: backend-pr-${{ github.event.number || 'unknown' }}
     secrets: inherit # pass all secrets
