--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -44,7 +44,7 @@ jobs:
 
   docker:
     uses: reims2/reims2/.github/workflows/docker.yml@main
-    concurrency: docker-${{ env.component }}-${{ github.ref }}
+    concurrency: docker-frontend-${{ github.ref }}
     if: ${{ github.event_name != 'merge_group' && github.event.action != 'labeled' }}
     secrets: inherit # pass all secrets
 
@@ -54,7 +54,7 @@ jobs:
       - ci
     if: github.ref == 'refs/heads/main'
     uses: reims2/reims2/.github/workflows/deploy.yml@main
-    concurrency: deploy-${{ env.component }}
+    concurrency: deploy-frontend
     secrets: inherit # pass all secrets
 
   dev-deploy:
@@ -62,7 +62,7 @@ jobs:
       - docker
     if: github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/dev'
     uses: reims2/reims2/.github/workflows/dev-deploy.yml@main
-    concurrency: dev-deploy-${{ env.component }}
+    concurrency: dev-deploy-frontend
     secrets: inherit # pass all secrets
 
   pr-deploy:
@@ -70,9 +70,9 @@ jobs:
       - docker
     if: ${{ (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'deploy')) }}
     uses: reims2/reims2/.github/workflows/deploy-instance.yml@main
-    concurrency: pr-deploy-${{ env.component }}-${{ github.ref }}
+    concurrency: pr-deploy-frontend-${{ github.ref }}
     with:
-      instance_name: ${{ env.component }}-pr-${{ github.event.number || 'unknown' }}
+      instance_name: frontend-pr-${{ github.event.number || 'unknown' }}
     secrets: inherit # pass all secrets
 
   e2e:
