fix(actions): use inputs instead of env variable

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,9 +9,6 @@ on:
   merge_group:
   workflow_dispatch:
 
-env:
-  component: docs
-
 defaults:
   run:
     working-directory: ./docs
@@ -23,9 +20,9 @@ jobs:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
       - uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b # v4
         with:
-          node-version-file: "${{ env.component }}/.nvmrc"
+          node-version-file: "docs/.nvmrc"
           cache: "yarn"
-          cache-dependency-path: "${{ env.component }}/yarn.lock"
+          cache-dependency-path: "docs/yarn.lock"
 
       - name: Install dependencies 📦
         run: yarn install --immutable
@@ -34,9 +31,11 @@ jobs:
 
   docker:
     uses: reims2/reims2/.github/workflows/docker.yml@main
-    concurrency: docker-${{ github.ref }}
+    concurrency: docker-docs-${{ github.ref }}
     if: ${{ github.event_name != 'merge_group' }}
     secrets: inherit # pass all secrets
+    with:
+      component: docs
 
   deploy:
     needs:
