--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -14,9 +14,6 @@ on:
   merge_group:
   workflow_dispatch:
 
-env:
-  component: backend
-
 defaults:
   run:
     working-directory: ./backend
@@ -43,9 +40,11 @@ jobs:
 
   docker:
     uses: reims2/reims2/.github/workflows/docker.yml@main
-    concurrency: docker-${{ github.ref }}
+    concurrency: docker-backend-${{ github.ref }}
     if: ${{ github.event_name != 'merge_group' && github.event.action != 'labeled' }}
     secrets: inherit # pass all secrets
+    with:
+      component: backend
 
   deploy:
     needs:
