--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,6 +6,11 @@ on:
       metadata_json:
         description: "JSON from docker metadata step"
         value: ${{ jobs.docker.outputs.json }}
+    inputs:
+      component:
+        description: "Name of the component"
+        required: true
+        type: string
 
 jobs:
   docker:
@@ -41,8 +46,8 @@ jobs:
         uses: docker/metadata-action@8e5442c4ef9f78752691e2d8f8d19755c6f78e81 # v5
         with:
           images: |
-            reims2/reims2-${{ env.component }}
-            ghcr.io/reims2/reims2-${{ env.component }}
+            reims2/reims2-${{ inputs.component }}
+            ghcr.io/reims2/reims2-${{ inputs.component }}
           tags: |
             type=semver,pattern={{version}}
             type=ref,event=branch
@@ -59,7 +64,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@16ebe778df0e7752d2cfcbd924afdbbd89c1a755 # v6
         with:
-          context: ./${{ env.component }}
+          context: ./${{ inputs.component }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
