--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -37,6 +37,8 @@ jobs:
       - name: Update dependency graph
         if: github.ref == 'refs/heads/main'
         uses: advanced-security/maven-dependency-submission-action@4f64ddab9d742a4806eeb588d238e4c311a8397d # v4
+        with:
+          directory: backend
 
   docker:
     uses: reims2/reims2/.github/workflows/docker.yml@main
