--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -14,6 +14,7 @@
     ":automergeTypes",
     ":automergeDigest",
     ":automergePr",
+    ":prConcurrentLimitNone",
     "group:test",
     "group:linters",
     "group:definitelyTyped",
