ci: try to reduce number of runs

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,8 +3,8 @@ name: docs
 on:
   push:
     branches:
-      - "**"
-    tags: ["v*.*.*"]
+      - "main"
+      - "dev"
   pull_request:
   merge_group:
   workflow_dispatch:
