--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -3,8 +3,8 @@ name: backend
 on:
   push:
     branches:
-      - "**"
-    tags: ["v*.*.*"]
+      - "main"
+      - "dev"
   pull_request:
     types:
       - "opened"
