ci: readd concurrent limit for renovate to reduce number of CI runs

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -14,7 +14,7 @@
     ":automergeTypes",
     ":automergeDigest",
     ":automergePr",
-    ":prConcurrentLimitNone",
+    ":prConcurrentLimit20",
     "group:test",
     "group:linters",
     "group:definitelyTyped",
