ci: also run backend and docs actions only on changes

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -6,12 +6,20 @@ on:
       - "main"
       - "dev"
   pull_request:
+    paths:
+      - ".github/**"
+      - "backend/**"
+      - "e2e/**"
     types:
       - "opened"
       - "synchronize"
       - "reopened"
       - "labeled"
   merge_group:
+    paths:
+      - ".github/**"
+      - "backend/**"
+      - "e2e/**"
   workflow_dispatch:
 
 defaults:
