--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -55,17 +55,6 @@ jobs:
     with:
       component: frontend
 
-  deploy:
-    needs:
-      - docker
-      - ci
-    if: github.ref == 'refs/heads/main'
-    uses: reims2/reims2/.github/workflows/deploy.yml@main
-    concurrency: deploy-frontend
-    secrets: inherit # pass all secrets
-    with:
-      component: frontend
-
   dev-deploy:
     needs:
       - docker
@@ -76,21 +65,22 @@ jobs:
     with:
       component: frontend
 
-  pr-deploy:
+  test-deploy:
     needs:
       - docker
-    if: ${{ (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'deploy')) }}
+    if: github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/main'
     uses: reims2/reims2/.github/workflows/deploy-instance.yml@main
-    concurrency: pr-deploy-frontend-${{ github.ref }}
+    concurrency: e2e-test
     with:
-      instance_name: frontend-pr-${{ github.event.number || 'unknown' }}
+      instance_name: e2e
     secrets: inherit # pass all secrets
 
   e2e:
     needs:
-      - deploy
+      - dev-deploy
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 20
+    concurrency: e2e-test
     defaults:
       run:
         working-directory: ./e2e
@@ -106,9 +96,23 @@ jobs:
         run: yarn playwright install --with-deps
       - name: Run Playwright tests
         run: yarn playwright test
+        env:
+          BASE_URL: "https://e2e.reims2.app"
       - uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874 # v4
         if: always()
         with:
           name: playwright-report
-          path: playwright-report/
+          path: e2e/playwright-report/
           retention-days: 30
+
+  deploy:
+    needs:
+      - docker
+      - ci
+      - e2e
+    if: github.ref == 'refs/heads/main'
+    uses: reims2/reims2/.github/workflows/deploy.yml@main
+    concurrency: deploy-frontend
+    secrets: inherit # pass all secrets
+    with:
+      component: frontend
