--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -95,7 +95,7 @@ jobs:
       - name: Install dependencies
         run: yarn
       - name: Run Playwright tests
-        run: yarn playwright test
+        run: npx playwright test
         env:
           HOME: /root
           BASE_URL: "https://e2e.reims2.app"
