--- a/ansible/.releaserc
+++ b/ansible/.releaserc
@@ -15,6 +15,11 @@
         "preset": "conventionalcommits"
       }
     ],
-    "@semantic-release/github"
+    [
+    "@semantic-release/github",
+      {
+        "successComment": false,
+      }
+    ]
   ]
 }
