--- a/.github/workflows/deploy-instance.yml
+++ b/.github/workflows/deploy-instance.yml
@@ -12,14 +12,14 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     environment:
-      name: development
+      name: testing
       url: https://${{ inputs.instance_name }}.reims2.app
     steps:
       - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@8e5442c4ef9f78752691e2d8f8d19755c6f78e81 # v5
         with:
-          images: reims2/reims2-${{ env.component }}
+          images: reims2/reims2-frontend
           tags: |
             type=sha,priority=2000
         env:
@@ -37,6 +37,8 @@ jobs:
           requirements: requirements.yml
           options: |
             --inventory hosts
-            -e "${{ env.component }}_image=${{ steps.meta.outputs.tags }}"
+            -e "frontend_image=${{ steps.meta.outputs.tags }}"
+            -e "backend_image=${{ steps.meta.outputs.tags }}"
+            -e "docs_image=${{ steps.meta.outputs.tags }}"
             -e "stack_name=reims2-${{ inputs.instance_name }}"
             -e "app_domain=${{ inputs.instance_name }}.reims2.app"
