--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -30,6 +30,21 @@
       "automerge": true
     },
     {
+      "matchPackageNames": [
+        "playwright",
+        "@playwright/test",
+        "mcr.microsoft.com/playwright",
+      ],
+      "matchDatasources": ["docker", "npm"]
+      "groupName": "playwright monorepo",
+      "matchUpdateTypes": [
+        "digest",
+        "patch",
+        "minor",
+        "major"
+      ]
+    },
+    {
       "extends": ["packages:test", "packages:linters", "schedule:monthly"]
     }
   ],
