--- a/.github/workflows/deploy-instance.yml
+++ b/.github/workflows/deploy-instance.yml
@@ -15,11 +15,26 @@ jobs:
       name: testing
       url: https://${{ inputs.instance_name }}.reims2.app
     steps:
-      - name: Extract Docker metadata
-        id: meta
+      - id: meta_frontend
         uses: docker/metadata-action@8e5442c4ef9f78752691e2d8f8d19755c6f78e81 # v5
         with:
           images: reims2/reims2-frontend
+          tags: |
+            type=sha,priority=2000
+        env:
+          DOCKER_METADATA_PR_HEAD_SHA: true
+      - id: meta_backend
+        uses: docker/metadata-action@8e5442c4ef9f78752691e2d8f8d19755c6f78e81 # v5
+        with:
+          images: reims2/reims2-backend
+          tags: |
+            type=sha,priority=2000
+        env:
+          DOCKER_METADATA_PR_HEAD_SHA: true
+      - id: meta_docs
+        uses: docker/metadata-action@8e5442c4ef9f78752691e2d8f8d19755c6f78e81 # v5
+        with:
+          images: reims2/reims2-docs
           tags: |
             type=sha,priority=2000
         env:
@@ -37,8 +52,8 @@ jobs:
           requirements: requirements.yml
           options: |
             --inventory hosts
-            -e "frontend_image=${{ steps.meta.outputs.tags }}"
-            -e "backend_image=${{ steps.meta.outputs.tags }}"
-            -e "docs_image=${{ steps.meta.outputs.tags }}"
+            -e "frontend_image=${{ steps.meta_frontend.outputs.tags }}"
+            -e "backend_image=${{ steps.meta_backend.outputs.tags }}"
+            -e "docs_image=${{ steps.meta_docs.outputs.tags }}"
             -e "stack_name=reims2-${{ inputs.instance_name }}"
             -e "app_domain=${{ inputs.instance_name }}.reims2.app"
