build(browserslist): use baseline widely available
not sure if it has any effect

--- a/frontend/.browserslistrc
+++ b/frontend/.browserslistrc
@@ -1,4 +1,7 @@
-> 1%
-last 2 versions
-not dead
-not ie 11
+chrome > 0 and last 2.5 years,
+safari > 0 and last 2.5 years,
+firefox > 0 and last 2.5 years,
+edge > 0 and last 2.5 years,
+ios > 0 and last 2.5 years,
+and_chr > 0 and last 2.5 years,
+and_ff > 0 and last 2.5 years
