Revert "ci: remove labeling handlingfor now"
This reverts commit b17f37c6454d1dc8f63ef80022868097f91fd958.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,6 +9,10 @@ on:
     paths:
       - ".github/**"
       - "docs/**"
+  merge_group:
+    paths:
+      - ".github/**"
+      - "docs/**"
   workflow_dispatch:
 
 defaults:
