--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -10,6 +10,11 @@ on:
       - ".github/**"
       - "backend/**"
       - "e2e/**"
+    types:
+      - "opened"
+      - "synchronize"
+      - "reopened"
+      - "labeled"
   merge_group:
     paths:
       - ".github/**"
