--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -18,8 +18,11 @@
     "group:test",
     "group:linters",
     "group:definitelyTyped",
+    "group:allDigest",
+    "group:vite",
     "schedule:automergeWeekends"
   ],
+  "configMigration": true,
   "labels": ["dependencies"],
   "platformAutomerge": true,
   "packageRules": [
@@ -33,16 +36,11 @@
       "matchPackageNames": [
         "playwright",
         "@playwright/test",
-        "mcr.microsoft.com/playwright",
+        "mcr.microsoft.com/playwright"
       ],
       "matchDatasources": ["docker", "npm"],
       "groupName": "playwright monorepo",
-      "matchUpdateTypes": [
-        "digest",
-        "patch",
-        "minor",
-        "major"
-      ]
+      "matchUpdateTypes": ["digest", "patch", "minor", "major"]
     },
     {
       "extends": ["packages:test", "packages:linters", "schedule:monthly"]
