ci: readd GH container repo

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -47,6 +47,7 @@ jobs:
         with:
           images: |
             reims2/reims2-${{ inputs.component }}
+            ghcr.io/reims2/reims2-${{ inputs.component }}
           tags: |
             type=semver,pattern={{version}}
             type=ref,event=branch
