--- a/.github/workflows/deploy-instance.yml
+++ b/.github/workflows/deploy-instance.yml
@@ -16,6 +16,10 @@ jobs:
       name: testing
       url: https://${{ inputs.instance_name }}.reims2.app
     steps:
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+        with:
+          fetch-depth: 0
+
       - id: meta_frontend
         uses: docker/metadata-action@8e5442c4ef9f78752691e2d8f8d19755c6f78e81 # v5
         with:
@@ -41,14 +45,10 @@ jobs:
         env:
           DOCKER_METADATA_PR_HEAD_SHA: true
 
-      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
-        with:
-          fetch-depth: 0
-          repository: reims2/reims2-ansible-playbook
       - name: Run playbook
         uses: dawidd6/action-ansible-playbook@c97d71562fcba83cc1ea0602d5a77013427f7571 # v2
         with:
-          playbook: deploy-single-stack.yml
+          playbook: ansible/deploy-single-stack.yml
           key: ${{secrets.ANSIBLE_PRIVATE_KEY}}
           requirements: requirements.yml
           options: |
