ci: improve naming

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: ansible-lint
+name: Ansible Lint
 
 on:
   push:
@@ -17,8 +17,7 @@ on:
       - "ansible/**"
 
 jobs:
-  build:
-    name: Ansible Lint # Naming the build is important to use it as a status check
+  lint:
     runs-on: ubuntu-latest
 
     steps:
