--- a/.github/workflows/ansible-deploy.yml
+++ b/.github/workflows/ansible-deploy.yml
@@ -7,6 +7,7 @@ jobs:
   ansible:
     runs-on: ubuntu-latest
     environment: production
+    concurrency: deploy
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
         with:
