--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -46,10 +46,13 @@
       "matchPackageNames": [
         "actions/*",
         "advanced-security/*",
-        "docker/*"
+        "docker/*",
+        "github/*"
       ],
       "matchDepTypes": ["action"],
       "groupName": "github actions",
+      "matchUpdateTypes": ["digest", "patch", "minor"]
+      "automerge": true
     },
     {
       "extends": ["packages:test", "packages:linters", "schedule:monthly"]
