--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,19 +1,7 @@
 name: docs
 
 on:
-  push:
-    branches:
-      - "main"
-      - "dev"
-  pull_request:
-    paths:
-      - ".github/**"
-      - "docs/**"
-  merge_group:
-    paths:
-      - ".github/**"
-      - "docs/**"
-  workflow_dispatch:
+  workflow_call:
 
 defaults:
   run:
@@ -25,41 +13,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
-      - uses: actions/setup-node@0a44ba7841725637a19e28fa30b79a866c81b0a6 # v4
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            src:
+              - ".github/**"
+              - "docs/**"
+      - uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b # v4
         with:
           node-version-file: "docs/.nvmrc"
           cache: "yarn"
           cache-dependency-path: "docs/yarn.lock"
 
       - name: Install dependencies 📦
+        if: steps.filter.outputs.src == 'true'
         run: yarn install --immutable
       - name: Run build
+        if: steps.filter.outputs.src == 'true'
         run: yarn run build
-
-  docker:
-    uses: reims2/reims2/.github/workflows/docker.yml@main
-    concurrency: docker-docs-${{ github.ref }}
-    if: ${{ github.event_name != 'merge_group' }}
-    secrets: inherit # pass all secrets
-    with:
-      component: docs
-
-  deploy:
-    needs:
-      - docker
-    if: github.ref == 'refs/heads/main'
-    uses: reims2/reims2/.github/workflows/deploy.yml@main
-    concurrency: deploy-docs
-    secrets: inherit # pass all secrets
-    with:
-      component: docs
-
-  dev-deploy:
-    needs:
-      - docker
-    if: github.event_name == 'workflow_dispatch'
-    uses: reims2/reims2/.github/workflows/dev-deploy.yml@main
-    concurrency: dev-deploy-docs
-    secrets: inherit # pass all secrets
-    with:
-      component: docs
