--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -2,11 +2,6 @@ name: deploy
 
 on:
   workflow_call:
-    inputs:
-      component:
-        description: "Name of the component"
-        required: true
-        type: string
 
 jobs:
   deploy:
@@ -19,7 +14,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@8e5442c4ef9f78752691e2d8f8d19755c6f78e81 # v5
         with:
-          images: reims2/reims2-${{ inputs.component }}
+          images: reims2/reims2-frontend
           tags: |
             type=sha,priority=2000
             type=semver,pattern={{version}},priority=2100
@@ -33,4 +28,4 @@ jobs:
           username: actions
           key: ${{ secrets.PRIVATE_KEY }}
           port: 22
-          script: /srv/update_script/update.sh reims2 ${{ inputs.component }} ${{ fromJSON(steps.meta.outputs.json).tags[0] }}
+          script: /srv/reims2/update.sh ${{ fromJSON(steps.meta.outputs.json).tags[0] }}
