--- a/ansible/roles/update_script/defaults/main.yml
+++ b/ansible/roles/update_script/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
-update_script_install_location: /srv/update_script
+update_script_install_location: /srv/{{ stack_name }}
 update_script_path: "{{ update_script_install_location }}/update.sh"
