fix(ci): matrix for docker job

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,9 @@ jobs:
     uses: reims2/reims2/.github/workflows/docs.yml@main
 
   docker:
+    strategy:
+      matrix:
+        component: [frontend, backend, docs]
     name: "Docker build"
     uses: reims2/reims2/.github/workflows/docker.yml@main
     concurrency: docker-frontend-${{ matrix.component }}
