--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,19 +8,20 @@ on:
   workflow_dispatch:
 
 jobs:
-  ci:
-    strategy:
-      matrix:
-        component: [frontend, backend, docs]
-    permissions:
-      pull-requests: read
-    name: "Lint, test, build"
-    uses: reims2/reims2/.github/workflows/${{ matrix.component }}.yml@main
+  frontend-ci:
+    name: "Frontend"
+    uses: reims2/reims2/.github/workflows/frontend.yml@main
+  backend-ci:
+    name: "Backend"
+    uses: reims2/reims2/.github/workflows/backend.yml@main
+  docs-ci:
+    name: "Docs"
+    uses: reims2/reims2/.github/workflows/docs.yml@main
 
   docker:
     name: "Docker build"
     uses: reims2/reims2/.github/workflows/docker.yml@main
-    concurrency: docker-frontend-${{ matrix.component }}
+    concurrency: docker-${{ matrix.component }}-${{ github.ref }}
     secrets: inherit # pass all secrets
     with:
       component: ${{ matrix.component }}
